--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <a-scene>
       <a-assets>
-        <img id="cielo1" src="assets/fondo1.jpg">
-        <img id="cielo2" src="assets/fondo2.jpg">
-        <img id="cielo3" src="assets/fondo3.jpg">
+        <img id="cielo1" src="https://live.staticflickr.com/3108/2578040107_dbe64c6545_k.jpg">
+        <img id="cielo2" src="https://live.staticflickr.com/5707/30767738302_9d0db7bb2e_k.jpg">
+        <img id="cielo3" src="https://live.staticflickr.com/65535/48880603823_9002de710d_k.jpg">
       </a-assets>
       <a-image src="#cielo1" position="-2 1.8 -3" width="1.5" height="0.75" onclick="show('cielo1')"></a-image> 
       <a-image src="#cielo2" position="0 1.8 -3" width="1.5" height="0.75" onclick="show('cielo2')"></a-image>
